Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 10.1.13
-
Fix Version/s: 10.1.14
-
Component/s: Authentication and Privilege System, Plugins
-
Labels:None
-
Sprint:10.1.14
Description
MariaDB [(none)]> select @@version;
|
+----------------------------+
|
| @@version |
|
+----------------------------+
|
| 10.1.13-MariaDB-enterprise |
|
+----------------------------+
|
1 row in set (0.00 sec)
|
 |
MariaDB [(none)]> create user 'newuser'@'localhost';
|
ERROR 2013 (HY000): Lost connection to MySQL server during query
|
stack_bottom = 0x7f2c0db45130 thread_stack 0x48400
|
/usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x559d73ee270e]
|
/usr/sbin/mysqld(handle_fatal_signal+0x38d)[0x559d73a0eb2d]
|
/lib64/libpthread.so.0(+0xf100)[0x7f2c0d824100]
|
/lib64/libc.so.6(+0x155c3c)[0x7f2c0ba93c3c]
|
/lib64/libcrack.so.2(FascistCheckUser+0x47)[0x7f2c0d1e77e7]
|
mysys/stacktrace.c:247(my_print_stacktrace)[0x559d73ea922c]
|
sql/signal_handler.cc:160(handle_fatal_signal)[0x559d73821676]
|
sql/sql_plugin.cc:2369(plugin_foreach_with_mask(THD*, char (*)(THD*, st_plugin_int*, void*), int, unsigned int, void*))[0x559d7389eb36]
|
sql/sql_acl.cc:904(validate_password)[0x559d738283eb]
|
sql/sql_acl.cc:9499(mysql_create_user(THD*, List<st_lex_user>&, bool))[0x559d7383217f]
|
sql/sql_parse.cc:4620(mysql_execute_command(THD*))[0x559d7388f9f1]
|
sql/sql_parse.cc:7305(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x559d738963ae]
|
sql/sql_parse.cc:1486(dispatch_command(enum_server_command, THD*, char*, unsigned int))[0x559d7389986b]
|
sql/sql_parse.cc:1109(do_command(THD*))[0x559d7389a0e9]
|
sql/sql_connect.cc:1349(do_handle_one_connection(THD*))[0x559d7395d59a]
|
sql/sql_connect.cc:1263(handle_one_connection)[0x559d7395d770]
|
/lib64/libpthread.so.0(+0x7dc5)[0x7f2c0d81cdc5]
|
/lib64/libc.so.6(clone+0x6d)[0x7f2c0ba3428d]
|