MDEV-9851: CREATE USER w/o IDENTIFIED BY clause causes crash when using cracklib plugin

Add a check for NULL password.